feat(supabase): implement Supabase PostgreSQL database migration
- Add Supabase configuration to environment files (.env.example, .env.docker.example, .env.production.example)
- Create comprehensive migration specification documents (design, requirements, tasks)
- Implement Supabase service layer (SupabaseService.js) as database abstraction
- Add service-specific implementations for Account, Agent, Chat, Conversation, and Plan services
- Create DatabaseBackend.js for dynamic backend selection (SQLite or Supabase)
- Implement Supabase authentication middleware with JWT validation
- Add Supabase Realtime integration for chat and conversation updates
- Create StorageService.js for media file management
- Add comprehensive property-based tests for migration validation (schema, auth, RLS, realtime, performance, backward compatibility)
- Implement data consistency and migration verification scripts
- Add configuration validator for Supabase environment variables
- Create frontend hooks and utilities for Supabase integration (useSupabaseChat, supabase-realtime, chat-supabase)
- Generate TypeScript types for Supabase database schema
- Enable gradual migration path with DATABASE_BACKEND configuration option

--- a/.env.example
+++ b/.env.example
@@ -62,7 +62,22 @@ CORS_ORIGINS=http://localhost:5173,http://localhost:3000,http://localhost:4173,h
 VITE_CORS_ALLOWED_ORIGINS=http://localhost:5173,http://localhost:3000
 
 # ============================================================================
-# BANCO DE DADOS SQLITE
+# SUPABASE - Banco de Dados PostgreSQL
+# ============================================================================
+
+# URL do projeto Supabase
+VITE_SUPABASE_URL=https://seu-projeto.supabase.co
+SUPABASE_URL=https://seu-projeto.supabase.co
+
+# Chave anônima (pública) - usada no frontend
+VITE_SUPABASE_ANON_KEY=sua-chave-anonima-aqui
+SUPABASE_ANON_KEY=sua-chave-anonima-aqui
+
+# Chave de serviço (privada) - APENAS backend, NUNCA expor no frontend
+SUPABASE_SERVICE_ROLE_KEY=sua-chave-de-servico-aqui
+
+# ============================================================================
+# BANCO DE DADOS SQLITE (LEGADO - para migração)
 # ============================================================================
 
 # Caminho do arquivo do banco de dados
@@ -81,6 +96,10 @@ SQLITE_CACHE_SIZE=2000
 
 # Modo de sincronização (NORMAL, FULL, OFF)
 SQLITE_SYNCHRONOUS=NORMAL
+
+# Backend de banco de dados ativo (sqlite ou supabase)
+# Durante migração, use 'sqlite'. Após migração completa, use 'supabase'
+DATABASE_BACKEND=sqlite
 
 # ============================================================================
 # SESSÃO E AUTENTICAÇÃO
