--- a/.env.production.example
+++ b/.env.production.example
@@ -39,7 +39,25 @@ REQUEST_TIMEOUT=10000
 CORS_ORIGINS=https://seu-dominio.com
 
 # ============================================================================
-# BANCO DE DADOS SQLITE
+# SUPABASE - Banco de Dados PostgreSQL
+# ============================================================================
+
+# URL do projeto Supabase
+VITE_SUPABASE_URL=https://seu-projeto.supabase.co
+SUPABASE_URL=https://seu-projeto.supabase.co
+
+# Chave anônima (pública) - usada no frontend
+VITE_SUPABASE_ANON_KEY=sua-chave-anonima-aqui
+SUPABASE_ANON_KEY=sua-chave-anonima-aqui
+
+# Chave de serviço (privada) - APENAS backend, NUNCA expor no frontend
+SUPABASE_SERVICE_ROLE_KEY=sua-chave-de-servico-aqui
+
+# Backend de banco de dados ativo (sqlite ou supabase)
+DATABASE_BACKEND=supabase
+
+# ============================================================================
+# BANCO DE DADOS SQLITE (LEGADO - para fallback)
 # ============================================================================
 
 # Caminho do arquivo do banco de dados
