--- a/.env.docker.example
+++ b/.env.docker.example
@@ -41,7 +41,25 @@ CORS_ORIGINS=https://cloudapi.wasend.com.br
 REQUEST_TIMEOUT=10000
 
 # ============================================================================
-# CONFIGURAÇÕES DO BANCO DE DADOS SQLITE
+# SUPABASE - Banco de Dados PostgreSQL
+# ============================================================================
+
+# URL do projeto Supabase
+VITE_SUPABASE_URL=https://seu-projeto.supabase.co
+SUPABASE_URL=https://seu-projeto.supabase.co
+
+# Chave anônima (pública) - usada no frontend
+VITE_SUPABASE_ANON_KEY=sua-chave-anonima-aqui
+SUPABASE_ANON_KEY=sua-chave-anonima-aqui
+
+# Chave de serviço (privada) - APENAS backend, NUNCA expor no frontend
+SUPABASE_SERVICE_ROLE_KEY=sua-chave-de-servico-aqui
+
+# Backend de banco de dados ativo (sqlite ou supabase)
+DATABASE_BACKEND=supabase
+
+# ============================================================================
+# CONFIGURAÇÕES DO BANCO DE DADOS SQLITE (LEGADO)
 # ============================================================================
 
 # Caminho do arquivo do banco de dados
