--- a/server/package.json
+++ b/server/package.json
@@ -39,6 +39,7 @@
     "mysql2": "^3.15.3",
     "pg": "^8.16.3",
     "socket.io": "^4.8.1",
+    "stripe": "^20.1.0",
     "uuid": "^11.1.0"
   },
   "devDependencies": {
