docs: update documentation and remove SQLite legacy references
- Update environment configuration example with Stripe payment keys
- Remove SQLite references from Docker workflow and update image tags
- Archive SQLite migrations with documentation explaining removal
- Update specs documentation to reflect Supabase migration and Stripe integration
- Add comprehensive Stripe integration documentation
- Update project guidelines and steering documents for current architecture
- Add legacy cleanup design document with migration notes
- Update database connection validators and instrumentation utilities
- Clarify that system now uses Supabase (PostgreSQL) exclusively
- Add test coverage for legacy cleanup verification
- Update all README files to reflect current tech stack and best practices
- Ensure consistency across documentation regarding database and payment systems

--- a/.env.example
+++ b/.env.example
@@ -77,8 +77,14 @@ SUPABASE_ANON_KEY=sua-chave-anonima-aqui
 SUPABASE_SERVICE_ROLE_KEY=sua-chave-de-servico-aqui
 
 # ============================================================================
-# NOTA: SQLite foi removido - o sistema agora usa apenas Supabase
+# STRIPE - Sistema de Pagamentos
 # ============================================================================
+
+# Chave secreta da API Stripe (APENAS backend)
+STRIPE_SECRET_KEY=sk_test_sua_chave_aqui
+
+# Segredo do webhook Stripe
+STRIPE_WEBHOOK_SECRET=whsec_seu_segredo_aqui
 
 # ============================================================================
 # SESSÃO E AUTENTICAÇÃO
