feat(multi-tenant): implement complete multi-tenant architecture with superadmin panel
- Add multi-tenant architecture with four-level hierarchy (Superadmin → Tenant → Account → Agent)
- Implement subdomain-based tenant routing and isolation with middleware
- Create superadmin authentication and impersonation system with audit logging
- Add tenant management, branding, and custom plans functionality
- Implement role-based access control (RBAC) for superadmin, tenant admin, and user roles
- Create database migrations for superadmins, tenants, branding, and plans tables
- Add tenant_id field to existing tables for data isolation
- Implement Row-Level Security (RLS) policies for cross-tenant data protection
- Create SuperadminService and TenantService for platform-wide operations
- Modify AccountService, AgentService, and QuotaService to support tenant scoping
- Add comprehensive integration and property-based tests for tenant isolation
- Implement superadmin dashboard with tenant management and metrics
- Add tenant admin panel for account, branding, and plan management
- Create public routes for tenant discovery and subdomain validation
- Update CORS handler to support subdomain-based routing
- Add detailed specification documents for multi-tenant architecture and superadmin panel
- Include migration scripts and superadmin creation utilities
- Add verification report documenting multi-tenant implementation and security measures

--- a/server/.env.example
+++ b/server/.env.example
@@ -89,12 +89,36 @@ S3_UPLOAD_MAX_SIZE=52428800
 S3_PRESIGNED_URL_EXPIRY=3600
 
 # ============================================================================
+# MULTI-TENANT - Configuração de Domínios
+# ============================================================================
+
+# Domínio base para produção (sem www)
+BASE_DOMAIN=cortexx.online
+
+# Domínio base para desenvolvimento local
+DEV_BASE_DOMAIN=cortexx.local
+
+# Subdomínio do painel superadmin
+SUPERADMIN_SUBDOMAIN=superadmin
+
+# ============================================================================
+# SUPABASE - Banco de Dados
+# ============================================================================
+
+# URL do projeto Supabase
+SUPABASE_URL=https://seu-projeto.supabase.co
+
+# Chave de serviço (service_role) - NUNCA exponha no frontend!
+SUPABASE_SERVICE_ROLE_KEY=sua-service-role-key
+
+# ============================================================================
 # PRODUÇÃO - Configurações adicionais
 # ============================================================================
 # Em produção, ajuste as seguintes variáveis:
 #
 # NODE_ENV=production
-# CORS_ORIGINS=https://seu-dominio.com
+# BASE_DOMAIN=cortexx.online
+# CORS_ORIGINS=https://cortexx.online,https://*.cortexx.online
 # LOG_LEVEL=info
 # SESSION_SECRET=chave-segura-gerada-com-openssl
 # S3_ENABLED=true
