--- a/server/package.json
+++ b/server/package.json
@@ -24,6 +24,7 @@
     "@aws-sdk/s3-request-presigner": "^3.943.0",
     "@supabase/supabase-js": "^2.45.0",
     "axios": "^1.13.2",
+    "bcrypt": "^6.0.0",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "csurf": "^1.11.0",
