--- a/server/package.json
+++ b/server/package.json
@@ -41,7 +41,8 @@
     "pg": "^8.16.3",
     "socket.io": "^4.8.1",
     "stripe": "^20.1.0",
-    "uuid": "^11.1.0"
+    "uuid": "^11.1.0",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "eslint": "^9.39.1",
