chore: update version to 0.0.4 and refactor Traefik configuration
- Bump version from 0.0.1 to 0.0.4 in package.json and Dockerfile
- Add comprehensive Traefik configuration documentation in docs/traefik.yaml
- Simplify docker-compose-swarm.yaml Traefik routing rules with explicit subdomain hosts instead of wildcard regex
- Update Traefik certificate resolver from leresolver to letsencryptresolver
- Change service port mapping from 3004 to 3005
- Convert network_public from overlay to external network reference
- Enhance subdomainRouter.js with IP address detection to ignore internal health checks
- Update tenant-not-found response from HTML render to JSON format for API consistency
- Improve subdomain extraction logic to handle IP addresses used by Traefik health checks

--- a/docker-compose-swarm.yaml
+++ b/docker-compose-swarm.yaml
@@ -63,21 +63,11 @@ services:
           memory: 512M
       labels:
         - traefik.enable=true
-        # Router principal - domínio raiz + wildcard subdomínios (HTTPS)
-        - traefik.http.routers.cortexx.rule=Host(`cortexx.online`) || HostRegexp(`{subdomain:[a-z0-9-]+}.cortexx.online`)
+        # Router HTTPS - domínio principal + subdomínios
+        - traefik.http.routers.cortexx.rule=Host(`cortexx.online`) || Host(`acmecorp.cortexx.online`) || Host(`cortexx.cortexx.online`) || Host(`superadmin.cortexx.online`)
         - traefik.http.routers.cortexx.entrypoints=websecure
         - traefik.http.routers.cortexx.tls=true
-        - traefik.http.routers.cortexx.tls.certresolver=leresolver
-        # Wildcard certificate para subdomínios
-        - traefik.http.routers.cortexx.tls.domains[0].main=cortexx.online
-        - traefik.http.routers.cortexx.tls.domains[0].sans=*.cortexx.online
-        # Router HTTP - redirect para HTTPS
-        - traefik.http.routers.cortexx-http.rule=Host(`cortexx.online`) || HostRegexp(`{subdomain:[a-z0-9-]+}.cortexx.online`)
-        - traefik.http.routers.cortexx-http.entrypoints=web
-        - traefik.http.routers.cortexx-http.middlewares=redirect-to-https
-        # Middleware de redirect
-        - traefik.http.middlewares.redirect-to-https.redirectscheme.scheme=https
-        - traefik.http.middlewares.redirect-to-https.redirectscheme.permanent=true
+        - traefik.http.routers.cortexx.tls.certresolver=letsencryptresolver
         # Service configuration
         - traefik.http.services.cortexx.loadbalancer.server.port=3001
         - traefik.http.services.cortexx.loadbalancer.healthcheck.path=/health
@@ -88,7 +78,7 @@ services:
     
     # Ports (optional - Traefik handles routing)
     ports:
-      - "3004:3001"
+      - "3005:3001"
     
     # Volumes - Only logs needed (Supabase handles data)
     volumes:
@@ -108,8 +98,8 @@ services:
 
 networks:
   network_public:
-    driver: overlay
-    attachable: true
+    external: true
+    name: network_public
 
 volumes:
   cortexx-logs:
