feat(chat): implement REST API and Supabase Realtime migration
- Add API v1 routes for chat operations with REST endpoints (/api/v1/chat/*)
- Implement API key authentication middleware for external API consumers
- Create RealtimeService for Supabase Realtime event broadcasting and subscriptions
- Add ExternalWebhookService for dispatching chat events to external consumers
- Implement useSupabaseRealtime hook for frontend real-time message synchronization
- Add chat realtime provider configuration (supabase/socketio) to environment
- Update ChatService with event emission for realtime updates
- Create comprehensive migration design and requirements documentation
- Update chatMessageHandler webhook to integrate with new realtime system
- Refactor ChatLayout component to use new realtime subscription hook
- Add webhook routes for external API event delivery
- Enable Supabase Realtime publication on chat_messages and conversations tables
- Migrate from Socket.IO to Supabase Realtime for improved performance and scalability

--- a/.env.example
+++ b/.env.example
@@ -102,6 +102,15 @@ SESSION_SECRET=your-secret-key-here-generate-with-openssl
 LOG_LEVEL=info
 
 # ============================================================================
+# CHAT REALTIME - Configuração do Provider
+# ============================================================================
+# Provider de realtime para o chat (supabase ou socketio)
+# - supabase: Usa Supabase Realtime (recomendado, mais rápido)
+# - socketio: Usa Socket.IO (legado, para compatibilidade)
+VITE_CHAT_REALTIME_PROVIDER=supabase
+CHAT_REALTIME_PROVIDER=supabase
+
+# ============================================================================
 # COMANDOS DE DESENVOLVIMENTO
 # ============================================================================
 # npm run dev:full    - Frontend + Backend (recomendado)
