--- a/package.json
+++ b/package.json
@@ -93,6 +93,7 @@
     "@radix-ui/react-tooltip": "^1.1.4",
     "@supabase/supabase-js": "^2.89.0",
     "@tanstack/react-query": "^5.56.2",
+    "@tanstack/react-virtual": "^3.13.13",
     "@types/luxon": "^3.4.2",
     "@types/react-datepicker": "^7.0.0",
     "axios": "^1.8.3",
