--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "dev": "vite",
     "build": "vite build",
     "build:production": "vite build --mode production",
-    "build:analyze": "vite build --mode production && npx vite-bundle-analyzer dist/stats.html",
+    "build:analyze": "ANALYZE=true vite build --mode production",
     "lint": "eslint .",
     "lint:security": "eslint .",
     "audit:security": "npm audit --audit-level=moderate",
@@ -151,12 +151,14 @@
     "jsdom": "^27.1.0",
     "lovable-tagger": "^1.1.7",
     "postcss": "^8.5.6",
+    "rollup-plugin-visualizer": "^5.14.0",
     "tailwindcss": "^3.4.18",
     "terser": "^5.44.0",
     "typescript": "^5.5.3",
     "typescript-eslint": "^8.0.1",
     "vite": "^5.4.21",
-    "vitest": "^4.0.7"
+    "vitest": "^4.0.7",
+    "web-vitals": "^5.1.0"
   },
   "overrides": {
     "esbuild": "^0.25.12"
