--- a/server/package.json
+++ b/server/package.json
@@ -26,6 +26,7 @@
     "axios": "^1.13.2",
     "bcrypt": "^6.0.0",
     "body-parser": "^1.20.2",
+    "compression": "^1.8.1",
     "cors": "^2.8.5",
     "csurf": "^1.11.0",
     "dompurify": "^3.3.0",
