feat(cache-redis): implement Redis caching layer with performance optimizations
- Add Redis service integration with connection pooling and error handling
- Implement CacheService abstraction for consistent cache operations across routes
- Add cache middleware for automatic response caching on GET endpoints
- Configure Redis in docker-compose with health checks and resource limits
- Add Redis environment variables to .env and .env.docker.example files
- Implement useAdminPlans hook with React Query integration for plan management
- Add caching for admin plans, branding config, and tenant information endpoints
- Update API client with improved error handling and request interceptors
- Add comprehensive design and requirements documentation in .kiro/specs
- Optimize query client configuration with stale time and cache time settings
- Improve Docker Compose configuration with resource constraints and networking
- Update README and DOCKER_QUICK_START with Redis setup instructions
- Add badge component styling improvements for better UI consistency
- Implement automatic cache invalidation on data mutations
- Reduce database load and improve API response times through intelligent caching

--- a/.env.docker.example
+++ b/.env.docker.example
@@ -86,6 +86,28 @@ LOG_FORMAT=json
 LOG_DIR=/app/logs
 
 # ============================================================================
+# REDIS - Cache Layer
+# ============================================================================
+
+# Host do Redis (use 'redis' para Docker)
+REDIS_HOST=redis
+
+# Porta do Redis
+REDIS_PORT=6379
+
+# Senha do Redis (OBRIGATÓRIO)
+REDIS_PASSWORD=your-secure-redis-password
+
+# Database do Redis (0-15)
+REDIS_DB=0
+
+# TTL padrão do cache em segundos (5 minutos)
+REDIS_CACHE_TTL=300
+
+# Habilitar cache Redis (true/false)
+REDIS_ENABLED=true
+
+# ============================================================================
 # CONFIGURAÇÕES DE PERFORMANCE NODE.JS
 # ============================================================================
 
