--- a/.env.example
+++ b/.env.example
@@ -102,6 +102,28 @@ SESSION_SECRET=your-secret-key-here-generate-with-openssl
 LOG_LEVEL=info
 
 # ============================================================================
+# REDIS - Cache Layer
+# ============================================================================
+
+# Host do Redis (use 'redis' para Docker, 'localhost' para desenvolvimento local)
+REDIS_HOST=localhost
+
+# Porta do Redis
+REDIS_PORT=6379
+
+# Senha do Redis (OBRIGATÓRIO em produção)
+REDIS_PASSWORD=
+
+# Database do Redis (0-15)
+REDIS_DB=0
+
+# TTL padrão do cache em segundos (5 minutos)
+REDIS_CACHE_TTL=300
+
+# Habilitar cache Redis (true/false)
+REDIS_ENABLED=true
+
+# ============================================================================
 # CHAT REALTIME - Configuração do Provider
 # ============================================================================
 # Provider de realtime para o chat (supabase ou socketio)
