--- a/server/package.json
+++ b/server/package.json
@@ -36,6 +36,7 @@
     "express-session": "^1.18.2",
     "helmet": "^8.1.0",
     "iconv-lite": "^0.7.0",
+    "ioredis": "^5.8.2",
     "jsdom": "^27.1.0",
     "multer": "^1.4.5-lts.1",
     "mysql2": "^3.15.3",
