feat(observability-queues): implement comprehensive observability, job queues, and rate limiting infrastructure
- Add OpenTelemetry tracing, metrics collection, and alerting system with Grafana dashboards
- Implement Bull-based job queues for campaigns, imports, and reports with worker processes
- Add tenant-based rate limiting middleware with configurable limits per subscription tier
- Implement response compression middleware for improved performance
- Add job status tracking routes for monitoring async operations
- Create comprehensive monitoring dashboards for cache, HTTP, and queue metrics
- Add Prometheus configuration with service discovery and scrape configs
- Implement graceful shutdown utilities and comprehensive test coverage
- Fix credit packages route registration and middleware configuration
- Migrate toast notifications from custom implementation to Sonner library
- Add strategic improvement specifications and multi-tenant isolation audit documentation
- Update environment configuration with observability, alerting, and rate limiting variables
- Add observability, scaling, and runbook documentation for operational guidance
- Enhance Docker Compose with monitoring stack (Prometheus, Grafana, Jaeger)
- Update dependencies and package configuration for queue and telemetry support

--- a/.env.example
+++ b/.env.example
@@ -86,6 +86,11 @@ STRIPE_SECRET_KEY=sk_test_sua_chave_aqui
 # Segredo do webhook Stripe
 STRIPE_WEBHOOK_SECRET=whsec_seu_segredo_aqui
 
+# Chave de criptografia para armazenar chaves Stripe no banco
+# IMPORTANTE: Gerar nova chave com: openssl rand -base64 32
+# Se não definida, usa SESSION_SECRET como fallback
+STRIPE_ENCRYPTION_KEY=
+
 # ============================================================================
 # SESSÃO E AUTENTICAÇÃO
 # ============================================================================
@@ -139,3 +144,44 @@ CHAT_REALTIME_PROVIDER=supabase
 # npm run dev         - Apenas Frontend (porta 5173)
 # npm run server:dev  - Apenas Backend (porta 3001)
 # npm run test:run    - Executar todos os testes
+
+# ============================================================================
+# OBSERVABILIDADE - OpenTelemetry & Métricas (v1.6+)
+# ============================================================================
+
+# Habilitar OpenTelemetry tracing (true/false)
+OTEL_ENABLED=false
+
+# Endpoint do exportador OTLP (Jaeger)
+OTEL_EXPORTER_OTLP_ENDPOINT=http://jaeger:4318/v1/traces
+
+# Nome do serviço para tracing
+OTEL_SERVICE_NAME=wuzapi-manager
+
+# ============================================================================
+# ALERTAS - Sistema de Notificações (v1.6+)
+# ============================================================================
+
+# URL do webhook para alertas (Discord/Slack)
+ALERT_WEBHOOK_URL=
+
+# Habilitar alertas por email (true/false)
+ALERT_EMAIL_ENABLED=false
+
+# ============================================================================
+# RATE LIMITING - Limites por Plano (v1.6+)
+# ============================================================================
+
+# Limite de requisições por minuto por plano
+RATE_LIMIT_FREE=100
+RATE_LIMIT_STARTER=200
+RATE_LIMIT_PRO=500
+RATE_LIMIT_BUSINESS=1000
+RATE_LIMIT_ENTERPRISE=2000
+
+# ============================================================================
+# GRAFANA - Dashboard de Métricas (v1.6+)
+# ============================================================================
+
+# Senha do admin do Grafana
+GRAFANA_PASSWORD=admin
