--- a/server/package.json
+++ b/server/package.json
@@ -34,6 +34,7 @@
     "express": "^4.18.2",
     "express-rate-limit": "^8.2.1",
     "express-session": "^1.18.2",
+    "connect-pg-simple": "^10.0.0",
     "helmet": "^8.1.0",
     "iconv-lite": "^0.7.0",
     "ioredis": "^5.8.2",
